--- a/src/main/webapp/commons/header.jspf
+++ b/src/main/webapp/commons/header.jspf
@@ -3,7 +3,7 @@
 	<nav class="navbar" role="navigation" aria-label="main navigation">
 	  <div class="navbar-brand">
 	    <a class="navbar-item" href="/">
-	      <img src="../vendetta.jpg" width="30" height="28"><!-- 112 28 -->
+	      <img src="/img/vendetta.jpg" width="30" height="28"><!-- 112 28 -->
 	    </a>
 	    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
 	      <span aria-hidden="true"></span>
@@ -15,8 +15,8 @@
 	  <div id="navbarBasicExample" class="navbar-menu">
 	    <div class="navbar-start">
 	      <a class="navbar-item" href="/">Home</a>
-	      <a class="navbar-item" href="/BoardController">공부게시판</a>
-	      <a class="navbar-item" href="/BoardController2">자유게시판</a>
+	      <a class="navbar-item" href="/studyboard">공부게시판</a>
+	      <a class="navbar-item" href="/etcboard">자유게시판</a>
 	      <div class="navbar-item has-dropdown is-hoverable">
 	        <a class="navbar-link">More</a>
 	        <div class="navbar-dropdown">
@@ -31,7 +31,7 @@
 	    <div class="navbar-end">
 	      <div class="navbar-item">
 	        <div class="buttons">
-	          <a class="button is-primary" href="signUp.jsp"><strong>Sign up</strong></a>
+	          <a class="button is-primary" href="/signup"><strong>Sign up</strong></a>
 	          <a class="button is-light" href="<%=actionstr%>"><strong><%=str%></strong></a>
 				<%--				TODO 스프링은 여기에서 바로 .jsp로 보내는거 안되는지?--%>
 	        </div>
