--- a/src/main/webapp/WEB-INF/views/commons/header.jspf
+++ b/src/main/webapp/WEB-INF/views/commons/header.jspf
@@ -15,7 +15,7 @@
 	  <div id="navbarBasicExample" class="navbar-menu">
 	    <div class="navbar-start">
 	      <a class="navbar-item" href="/">Home</a>
-	      <a class="navbar-item" href="/studyboard">공부게시판</a>
+	      <a class="navbar-item" href="/studyboardlist?page=1">공부게시판</a>
 	      <a class="navbar-item" href="/etcboard">자유게시판</a>
 	      <div class="navbar-item has-dropdown is-hoverable">
 	        <a class="navbar-link">More</a>
